Bug 351741 - Cannot move applications in K Application cascading popup menu onto desktop or panel
Summary: Cannot move applications in K Application cascading popup menu onto desktop o...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: 5.4.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL: https://www.kubuntuforums.net/showthr...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-25 06:55 UTC by Samuel
Modified: 2015-10-08 12:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel 2015-08-25 06:55:35 UTC
For speed of desktop use, I prefer the K Application Menu using a launcher based on cascading popup menus.  I also place frequently used applications into an empty panel.

This bug does not provide a previous feature which allowed me to drag applications from the popup menus into an empty panel.

Reproducible: Always

Steps to Reproduce:
1.   Install K Application Launcher based on cascading popup menus.
2.  Select an Application and Left Mouse Click on it
3.  Drag it to either  the desktop or an empty panel.

Actual Results:  
Nothing happens!  The cursor pointer has nothing associated with it.

If I do the same action with  the default Application Launcher, the left mouse drag of an application allows it to be placed on the desktop or an empty panel.  This doesn't happen with the Cascading Popup Menus.

Expected Results:  
The left mouse drag of an application in the cascading popup menus should drag the application to the point of release of the left mouse.  In my case I want to add applications to an empty panel using this technique.

I have tested this on the 24th August iso image for Kubuntu 15.10 and this problem is evident.
Comment 1 Eike Hein 2015-09-28 20:34:33 UTC
Git commit 0457866a82fb8dcf233b812e24e5c676a909013d by Eike Hein.
Committed on 28/09/2015 at 20:34.
Pushed by hein into branch 'Plasma/5.4'.

Fix refactoring regression breaking DND out of Kicker.

M  +2    -0    applets/kicker/plugin/appsmodel.cpp
M  +2    -0    applets/kicker/plugin/favoritesmodel.cpp

http://commits.kde.org/plasma-desktop/0457866a82fb8dcf233b812e24e5c676a909013d
Comment 2 Samuel 2015-10-06 11:19:58 UTC
The latest Plasma Version 5.4.2 solves this problem.  Thanks very much and I am very impressed with the new features and the look of this upgraded desktop.
Comment 3 Eike Hein 2015-10-08 12:18:54 UTC
Thanks!