Fix refactoring regression breaking DND out of Kicker.

BUG:351741